[project]
name = "haintech"
version = "0.1.22"
license = "MIT"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcin Leliwa", email = "marcin.leliwa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ampf>=0.1.18",
    "google-genai>=1.7.0",
    "google-generativeai>=0.8.4",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
huggingface = [
    "sentence-transformers>=4.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.2",
]

[tool.uv]
extra-index-url = ["https://europe-west3-python.pkg.dev/development-428212/pip/simple"]

[[tool.uv.index]]
name = "private-registry"
url = "https://europe-west3-python.pkg.dev/development-428212/pip"
publish-url = "https://europe-west3-python.pkg.dev/development-428212/pip"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]