[project]
name = "haintech"
version = "0.3.8"
license = "MIT"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marcin Leliwa", email = "marcin.leliwa@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ampf>=0.1.18",
    "google-genai>=1.7.0",
    "google-generativeai>=0.8.4",
    "openai>=1.68.2",
    "pydantic>=2.10.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
target-version = "py312"

[project.optional-dependencies]
huggingface = [
    "sentence-transformers>=4.0.2",
]
anthropic = [
    "anthropic>=0.52.2",
]
mcp = [
    "openai-agents>=0.0.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "anthropic>=0.53.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "openai-agents>=0.0.17",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-cov>=6.1.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.2",
    "sentence-transformers>=4.1.0",
]

[tool.uv]
extra-index-url = ["https://europe-west3-python.pkg.dev/development-428212/pip/simple"]

[[tool.uv.index]]
name = "private-registry"
url = "https://europe-west3-python.pkg.dev/development-428212/pip"
publish-url = "https://europe-west3-python.pkg.dev/development-428212/pip"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
